version/0.26/_sources/api/solver/_autosummary/settings/overset.rst.txt
:orphan:

.. _overset:

overset
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.overset.overset
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`overset_child <overset_child>`


.. rubric:: Included in:

================================================   =======================================

Parent                                                                             Summary

================================================   =======================================
:ref:`boundary_conditions <boundary_conditions>`       Enter the boundary conditions menu.

================================================   =======================================

